--- a/primeiro-app/src/app/home/home.page.html
+++ b/primeiro-app/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      You Better Load Empty and- Blank
+  <ion-toolbar color="dark">
+    <ion-title >
+      You Better Load Empty and Blank Thats Left Whit a Single Patetic Trace of This
     </ion-title>
   </ion-toolbar>
 </ion-header>
