--- a/primeiro-app/src/app/home/home.page.html
+++ b/primeiro-app/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="dark">
+  <ion-toolbar color="primary">
     <ion-title >
-      You Better Load Empty and Blank Thats Left Whit a Single Patetic Trace of This
+      <h1>Songs</h1>
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,27 @@
 <ion-content [fullscreen]="true">
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Card Title</ion-card-title>
-      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-title>Lamb Of God</ion-card-title>
+      <ion-card-subtitle>Laid To Rest</ion-card-subtitle>
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Console Yourself,You Better Alone,Destroy Yourself ,See Who Gives a Fuck
     </ion-card-content>
   </ion-card>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+       <p>Entre Os Valores Abaixo :</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label position="stacked">valor : 1</ion-label>
+          <ion-input></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
