--- a/primeiro-app/src/app/home/home.page.html
+++ b/primeiro-app/src/app/home/home.page.html
@@ -35,13 +35,13 @@
       <ion-col>
         <ion-item>
           <ion-label position="stacked">valor : 2</ion-label>
-          <ion-input [(ngModel)]="n2"></ion-input>
+          <ion-input [(ngModel)]="n2" disabled></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button (click)="calcular()">Calcular</ion-button>
+        <ion-button (click)="Fatorial()">Calcular</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
