--- a/primeiro-app/src/app/home/home.page.html
+++ b/primeiro-app/src/app/home/home.page.html
@@ -7,52 +7,49 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Lamb Of God</ion-card-title>
-      <ion-card-subtitle>Laid To Rest</ion-card-subtitle>
-    </ion-card-header>
   
-    <ion-card-content>
-      Console Yourself,You Better Alone,Destroy Yourself ,See Who Gives a Fuck
-    </ion-card-content>
-  </ion-card>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-       <p>Entre Os Valores Abaixo :</p>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          <ion-label position="stacked">valor : 1</ion-label>
-          <ion-input [(ngModel)]="n1"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          <ion-label position="stacked">valor : 2</ion-label>
-          <ion-input [(ngModel)]="n2" disabled></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-button (click)="Fatorial()">Calcular</ion-button>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item >
-          <ion-label>
-            Resultado :
-          </ion-label>
-          <ion-input disabled="true" [value]="exibirresultado()"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="stacked">Digite o CEP:</ion-label>
+            <ion-input [(ngModel)]="cep"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-button expand="block" (click)="consultaCEP()">Consultar</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="stacked">Logradouro: </ion-label>
+            <p> {{endereco.logradouro}}</p>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="stacked">Cidade: </ion-label>
+            <ion-input [ngModel]="endereco.localidade" disabled> </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="stacked">Estado: </ion-label>
+            <ion-input [ngModel]="endereco.uf" disabled> </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+    </ion-grid>
 </ion-content>
